Changelog
=========

2.2.3 (unreleased)
------------------

Breaking changes:

- *add item here*

New features:

- *add item here*

Bug fixes:

- *add item here*


2.2.2 (2016-06-27)
------------------

Bug fixes:

- Remove unused attribute access of ``fullname`` (whereas it should have been access via ``getProperty``) on a PlonePAS MemberData object in ``mail_password_template.pt``, which lead to attribute access errors.
  [thet]


2.2.1 (2015-09-12)
------------------

- Pull email_from_name from configuration registry.
  [esteele]


2.2.0 (2015-07-18)
------------------

- Fix getting email from address.
  [vangheem]


2.1.2 (2015-03-26)
------------------

- Set mail Content-Type within registration and password reset email
  templates (rather than HTTP response headers which are ignored).
  [davidjb]

- Read ``use_email_as_login`` setting from the registry instead of portal
  properties (see https://github.com/plone/Products.CMFPlone/issues/216).
  [jcerjak]

- Amend browser.txt test to the new p.a.registry-based control panels
  (Plone 5 only).
  [timo]

- Move tests to plone.app.testing.
  [tomgross]

- Added userid information in reset mail (useful when the administrator
  resets a user password)
  [sgeulette]


2.1.1 (2014-10-22)
------------------

- Fix i18n of 'This field is required' for the login field in pwreset form.
  [vincentfretin]

- Ported tests to plone.app.testing
  [tomgross]


2.1.0 (2014-02-26)
------------------

- Barceloneta Plone 5 theme test fix.
  [davisagli]


2.0.16 (2014-01-27)
-------------------

- Password reset emails will now be sent from the navigation root instead
  the portal, enabling support for multilingual sites and other subsites
  to keep the correct language, title, menus and designs.
  [regebro]


2.0.15 (2013-08-13)
-------------------

- Nothing changed yet.


2.0.14 (2013-05-23)
-------------------

- Always try to look up what the user entered as a login name before
  treating it as a user id.
  [davisagli]
